[package]
name = "adv"
version = "0.2.0"
edition = "2024"
authors = ["Griffin Evans"]
license = "UNLICENSE"
description = "Dispense short programming aphorisms in the style of Unix fortune"
readme = "README.md"
homepage = "https://github.com/grfwings/adv"
repository = "https://github.com/grfwings/adv"
categories = ["command-line-utilities"]

[dependencies]
fastrand = "2.3.0"
